FIX nested items dropdown was behind the inventory header (while it should be in the foreground)

--- a/src/assets/sass/var.scss
+++ b/src/assets/sass/var.scss
@@ -18,3 +18,6 @@ $desktop_min_width: 800px;
 /* Design
 -------------------------------------------------- */
 $radius: 20px;
+
+$nav-header: 20;
+$popup-z-index: 50;
